--- a/notebook_mean.ipynb
+++ b/notebook_mean.ipynb
@@ -2,24 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "import pandas as pd\r\n",
     "\r\n",
     "data = pd.read_excel('Data_tocheck.xlsx')\r\n",
-    "mean_vector = data.mean(axis=1)\r\n",
+    "mean_vector = data.mean(axis=0)\r\n",
     "\r\n",
-    "print(data.shape)"
+    "print(data.shape)\r\n",
+    "print(mean_vector.shape)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(48, 23)\n"
+      "(48, 23)\n",
+      "(23,)\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "\r\n",
+    "\r\n",
+    "mean_vector = mean_vector.to_numpy()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "import numpy as np\r\n",
+    "\r\n",
+    "mean_vector_matrix = np.tile(mean_vector, (48, 1))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "mean_centered_data = "
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
