--- a/notebook_mean.ipynb
+++ b/notebook_mean.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "import pandas as pd\r\n",
     "\r\n",
-    "data = pd.read_excel('Data_tocheck.xlsx')\r\n",
+    "data = pd.read_excel('Data_tocheck.xlsx', header=None)\r\n",
     "mean_vector = data.mean(axis=0)\r\n",
     "\r\n",
     "print(data.shape)\r\n",
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(48, 23)\n",
+      "(49, 23)\n",
       "(23,)\n"
      ]
     }
@@ -26,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
-    "\r\n",
-    "\r\n",
     "mean_vector = mean_vector.to_numpy()"
    ],
    "outputs": [],
@@ -37,20 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "import numpy as np\r\n",
     "\r\n",
-    "mean_vector_matrix = np.tile(mean_vector, (48, 1))"
+    "mean_vector_matrix = np.tile(mean_vector, (49, 1))"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
-    "mean_centered_data = "
+    "mean_centered_data = data - mean_vector_matrix"
    ],
    "outputs": [],
    "metadata": {}
